fix issue on mobile devices

--- a/style/style.scss
+++ b/style/style.scss
@@ -10,7 +10,7 @@ main{
     background-color: #2A2A2A;
 
     div.container-fluid{
-        height: 100vh;
+        min-height: 100vh;
     }
 
     #portfolio{
